[gd_scene load_steps=10 format=3 uid="uid://dlya20yq7j2bg"]

[ext_resource type="Script" path="res://Interface/ResolutionMenu/resolutionMenu.gd" id="1_7w7st"]
[ext_resource type="FontFile" uid="uid://b572bvrcrok26" path="res://Fontes/Press_Start_2P/PressStart2P-Regular.ttf" id="2_2cylu"]
[ext_resource type="Texture2D" uid="uid://dettwgh00v7dy" path="res://Interface/ConfigMenu/slider.bmp" id="3_hug10"]
[ext_resource type="Texture2D" uid="uid://dqa178ysibmx0" path="res://Interface/ConfigMenu/slider-grabed.bmp" id="4_3wvl0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqsdc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_p6c4i"]
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8wrt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qre7o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsgns"]

[node name="ResolutionMenu" type="Control" node_paths=PackedStringArray("init_button")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7w7st")
init_button = NodePath("Panel/OptionsContainer/FullScreen")
metadata/_edit_pinned_properties_ = [&"init_button"]

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -768.0
offset_top = 221.0
offset_right = 768.0
offset_bottom = 349.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_2cylu")
theme_override_font_sizes/font_size = 128
text = "Resolution"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -209.0
offset_right = 271.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rqsdc")

[node name="OptionsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -162.0
offset_right = 324.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullScreen" type="Button" parent="Panel/OptionsContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2cylu")
theme_override_font_sizes/font_size = 64
text = "Tela Cheia
"

[node name="Volume" type="HBoxContainer" parent="Panel/OptionsContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/OptionsContainer/Volume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2cylu")
text = "Vol"
label_settings = SubResource("LabelSettings_p6c4i")
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="Panel/OptionsContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("3_hug10")
theme_override_icons/grabber_highlight = ExtResource("4_3wvl0")
theme_override_icons/grabber_disabled = ExtResource("3_hug10")
theme_override_icons/tick = ExtResource("3_hug10")
theme_override_styles/slider = SubResource("StyleBoxFlat_n8wrt")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_qre7o")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_fsgns")
step = 10.0
ticks_on_borders = true

[node name="Language" type="Button" parent="Panel/OptionsContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2cylu")
theme_override_font_sizes/font_size = 64
text = "Idioma"

[node name="ExitConfig" type="Button" parent="Panel/OptionsContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2cylu")
theme_override_font_sizes/font_size = 64
text = "Fechar"

[connection signal="pressed" from="Panel/OptionsContainer/FullScreen" to="." method="_on_full_screen_pressed"]
[connection signal="pressed" from="Panel/OptionsContainer/Language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="Panel/OptionsContainer/ExitConfig" to="." method="_on_exit_config_pressed"]
